--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@remix-run/serve": "^2.8.1",
     "@remixicon/react": "^4.2.0",
     "@tremor/react": "^3.14.1",
+    "axios": "^1.6.8",
+    "hltv": "^3.5.0",
     "isbot": "^4.1.0",
+    "liquipedia-api": "^1.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.12.3"
