Add SSR configuration for noExternal dependencies and update font families and dependencies

--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@headlessui/tailwindcss": "^0.2.0",
+    "@nivo/bar": "^0.85.1",
+    "@nivo/core": "^0.85.1",
     "@remix-run/node": "^2.8.1",
     "@remix-run/react": "^2.8.1",
     "@remix-run/serve": "^2.8.1",
     "@remixicon/react": "^4.2.0",
     "@tremor/react": "^3.14.1",
     "axios": "^1.6.8",
+    "d3-interpolate": "^3.0.1",
     "hltv": "^3.5.0",
     "isbot": "^4.1.0",
     "liquipedia-api": "^1.0.10",
